# think

./: HyperMake  README.md
cpp/: CMakeLists.txt  cpp.hmake
cpp/inc/dp/: dispatch.h  graph.h  graph_def.h  ingress.h  operators.h  types.h
cpp/inc/dp/fx/: recv.h
cpp/inc/dp/ingress/: udp.h  videocap.h
cpp/inc/dp/util/: error.h  pool.h  queue.h
cpp/inc/movidius/: ncs.h  operators.h  ssd_mobilenet.h
cpp/inc/mqtt/: mqtt.h  operators.h
cpp/inc/vp/: dispatch.h  graph.h  ingress.h  operators.h
cpp/inc/vp/cv/: operators.h  videocap.h
cpp/inc/vp/ingress/: udp.h
cpp/inc/vp/mqtt/: mqtt.h
cpp/inc/vp/util/: pool.h  queue.h
cpp/src/dp/: dispatch.cpp  graph.cpp  graph_builder.cpp  graph_def.cpp  graph_def_parse.h  graph_def_parser.cpp  graph_def_parser_expect.cpp  graph_def_parser_unittest.cpp  graph_def_tokenizer.cpp  graph_def_tokenizer_unittest.cpp  graph_def_unittest.cpp  graph_var.cpp  imageid.cpp  ingress.cpp
cpp/src/dp/fx/: recv.cpp
cpp/src/dp/ingress/: udp.cpp  videocap.cpp
cpp/src/dp/op/: decodeimg.cpp  detectbox.cpp  factories.cpp  imageid.cpp  saveimage.cpp  sensitivity.cpp
cpp/src/dp/util/: error.cpp  pool.cpp
cpp/src/dpe/: app.cpp
cpp/src/movidius/: factory.cpp  fp16.cpp  ncs.cpp  operators.cpp  ssd_mobilenet.cpp
cpp/src/mqtt/: factory.cpp  mqtt.cpp  operators.cpp
cpp/src/objdetect/: app.cpp
cpp/src/viewer/: app.cpp
cpp/src/vp/: dispatch.cpp  graph.cpp  graph_builder.cpp  graph_var.cpp  ingress.cpp  pool.cpp
cpp/src/vp/cv/: operators.cpp  videocap.cpp
cpp/src/vp/ingress/: udp.cpp
cpp/src/vp/mqtt/: mqtt.cpp
cpp/src/vp/op/: detection.cpp  image.cpp  sensitivity.cpp
cpp/src/vpd/: app.cpp
doc/dp/: graph_def.md
